[package]
name = "wr-shader-dumper"
version = "0.1.0"
authors = ["Jamie Nicol <jamie@jamienicol.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build-parallel = "0.1.2"
glslopt = "0.1.9"
webrender_build = { path = "/home/jamie/src/gecko/gfx/wr/webrender_build" }
